# historical-k-index

./: .flake-setup-summary.md  .gitignore  BREAKTHROUGH_SESSION_SUMMARY.md  CITATION.cff  COMMUNITY_GOVERNANCE.md  COMPLETE_SESSION_SUMMARY_2025_12_03.md  CONSOLIDATE_REPOSITORY.sh  CONTRIBUTING.md  CREATE_ZENODO_RELEASE.md  ENVIRONMENT_READY.md  FAQ.md  FINAL_SESSION_ACHIEVEMENT_REPORT.md  GITHUB_PUSH_INSTRUCTIONS.md  H7_COMPONENT_COMPLETE_REPORT.md  H7_README.md  IMPROVEMENT_ROADMAP.md  LICENSE  MANUSCRIPT_UPDATE_SESSION_COMPLETE.md  NEXT_STEPS_STRATEGIC_EXCELLENCE.md  PARALLEL_EXECUTION_COMPLETE.md  PROGRESS_REPORT_AUTOMATED_DATA_COLLECTION.md  QUICKSTART.md  README.md  README_NEXT_STEPS.md  REORGANIZATION_COMPLETE.md  RESEARCH_IMPACT.md  RESEARCH_PROGRAM_REIMAGINED.md  RESEARCH_ROADMAP_EXTENDED.md  SESSION_COMPLETE.md  SESSION_COMPLETE_2025_12_03.md  SESSION_SUMMARY_2025_12_02.md  START_HERE.md  UPDATE_SCRIPT_PATHS.sh  flake.nix  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_contribution.md  research_proposal.md
archive/old-scripts/: CONSOLIDATE_DATA_FROM_KOSMIC_LAB.sh  REORGANIZE_FOR_TRILOGY.sh  SETUP_GITHUB.sh
archive/session-logs/: COMPLETE_EXTENDED_SESSION_SUMMARY.md  FINAL_COMPREHENSIVE_STATUS.md  LATEX_PDF_GENERATION_STATUS.md  MANUSCRIPT_UPDATES_VALIDATED_H7.md  PDF_GENERATION_COMPLETE.md  PUBLICATION_READINESS_VERIFICATION.md  REPOSITORY_EXCELLENCE_REPORT.md  TRILOGY_REORGANIZATION_COMPLETE.md
archive/setup-docs/: AUTHOR_QUICK_START.md  DEVELOPMENT_SETUP.md  FUTURE_ORGANIZATION_PROPOSAL.md  PHASE_0_EXECUTION_PLAN.md  QUICK_START.md
data/: README.md
data/processed/: H7_country_rankings_2021.csv  H7_evolutionary_progression.csv  H7_integration_report.txt  K_index_validated_h7_integration_1996_2020.csv
data/raw/: worldbank_indicator_search_results.csv
docs/: DATA_SOURCES.md  MEDIA_KIT.md  PARADIGM_SHIFT.md  REPLICATION_GUIDE.md
figures/: patent_summary_stats.txt
notebooks/: 01_explore_k_index.ipynb
papers/: README.md
scripts/: download_all_data.py  generate_submission_html.py  generate_submission_html_simple.py  generate_submission_pdfs.py  generate_supplementary_figures.py  regenerate_failed_pdfs.py
submission_html/: H7_Complete_Documentation.html  H7_Supplementary_Materials.html  index.html
submission_pdfs/: cover_letter_template.md
templates/: POLICY_BRIEF_TEMPLATE.md  README.md  TEACHING_MODULE_TEMPLATE.md
(+140 files in other folders)
